@@ -164,6 +164,7 @@ class User {
 		'upload',
 		'upload_by_url',
 		'userrights',
+		'userrights-interwiki',
 	);
 	/**
 	 * \type{\string} Cached results of getAllRights()
