@@ -137,6 +137,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * Avoid recursive crazy expansions in section edit comments for pages which
   contain '/*' in the title
 * Fix excessive memory usage when parsing pages with lots of links
+* (bug 12518) Interwiki userrights now reflects remote groups, not local groups
+
 
 === API changes in 1.14 ===
 
